Fixed spacing between sliders and presets

--- a/src/components/HomePage/Lights/Lights.css
+++ b/src/components/HomePage/Lights/Lights.css
@@ -135,6 +135,7 @@
     gap: 10%;
     width: 100%;
     margin-bottom: auto;
+    position: relative;
   }
 
   .saver, .dim, .night{
@@ -170,5 +171,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     width: 100%;
+    margin-top: 16%;
     
   }
